--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <title>
   Diana Sun's Resume
   </title>
 </head>
 
 <body>
-Text
+<div id = "header">
+Header
+</div>
+<div class = "centered">
+  <div class = "third">
+  Flow form
+  </div>
+  <div class = "third">
+  Geo form
+  </div>
+  <div class = "third" style="margin-right:0px">
+  Porn form
+  </div>
+  <div class = "third">
+  Flow form
+  </div>
+  <div class = "third">
+  Geo form
+  </div>
+  <div class = "third" style="margin-right:0px">
+  Porn form
+  </div>
+</div>
+
+<ul>
+</ul>
 </body>
 
 </html>
