--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Header
   
   </div>
   <div class = "third">
-  Flow form
+  <img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314">
   </div>
   <div class = "third">
   Geo form
