--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <title>
-  Diana Sun's Resume
+  Diana Sun
   </title>
 </head>
+
+
 
 <body>
 <div id = "header">
@@ -17,16 +20,16 @@ Header
   
   </div>
   <div class = "third">
-  <img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314">
+  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314"></a></p>
   </div>
   <div class = "third">
-  Geo form
+  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Geoform_03.jpg" height="210" width="314"></a></p>
   </div>
   <div class = "third" style="margin-right:0px">
-  Porn form
+  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Primitive_Form_01.jpg" height="210" width="314"></a></p>
   </div>
   <div class = "third">
-  Flow form
+  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Rotoform_01.jpg" height="210" width="314"></a></p>
   </div>
   <div class = "third">
   Geo form
