Edited Photo Size

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <div id = "header">
-Header
+Header goes here
 </div>
 <div class = "centered">
   <div class = "divider">
@@ -32,14 +32,14 @@ Header
   <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Rotoform_01.jpg" height="210" width="314"></a></p>
   </div>
   <div class = "third">
-  Geo form
+  <p><a href="www.diana-sun.com/blah"><img src = "images/Photography_1.jpg" height="210" width="314"></a></p>
   </div>
   <div class = "third" style="margin-right:0px">
-  Porn form
+  Sketches
   </div>
 </div>
 <div id = "footer">
-footer
+footer goes here
 </div>
 </body>
 
