--- a/index.html
+++ b/index.html
@@ -1,45 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
   <title>
   Diana Sun
   </title>
+
 </head>
 
 
 
 <body>
 <div id = "header">
-Header goes here
+<center>Header goes here</center>
 </div>
-<div class = "centered">
-  <div class = "divider">
-  
+  <div class="nav">
+      <ul class = "pull-right">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Resume</a></li>
+      </ul>
   </div>
+
+<div class = "centered">
+
+  <div class = "divider">
+  </div>
+
   <div class = "third">
   <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314"></a></p>
   </div>
+
   <div class = "third">
   <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Geoform_03.jpg" height="210" width="314"></a></p>
   </div>
+
   <div class = "third" style="margin-right:0px">
   <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Primitive_Form_01.jpg" height="210" width="314"></a></p>
   </div>
+
   <div class = "third">
-  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Rotoform_01.jpg" height="210" width="314"></a></p>
+  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Rotoform_02.jpg" height="210" width="314"></a></p>
   </div>
+
   <div class = "third">
   <p><a href="www.diana-sun.com/blah"><img src = "images/Photography_1.jpg" height="210" width="314"></a></p>
   </div>
+
   <div class = "third" style="margin-right:0px">
-  Sketches
+  <p><a href="www.diana-sun.com/blah"><img src = "images/Sketches_1.jpg" height="210" width="314"></a></p>
   </div>
+
 </div>
+
 <div id = "footer">
-footer goes here
+<center>footer goes here</center>
 </div>
 </body>
 
