--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+  <link rel="stylesheet" href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -22,8 +22,8 @@
 </div>
   <div class="nav">
       <ul class = "pull-right">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Resume</a></li>
+        <li><a href="#">About   </a></li>
+        <li><a href="#">   Resume</a></li>
       </ul>
   </div>
 
