--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 <center>Header goes here</center>
 </div>
   <div class="nav">
-      <ul class = "pull-right">
-        <li><a href="#">About   </a></li>
-        <li><a href="#">   Resume</a></li>
+    <div class = "container">
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="Diana_Sun_Resume.pdf">Resume</a></li>
       </ul>
+    </div>
   </div>
 
 <div class = "centered">
@@ -33,27 +35,27 @@
   </div>
 
   <div class = "third">
-  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314"></a></p>
+  <p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314"></a></p>
   </div>
 
   <div class = "third">
-  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Geoform_03.jpg" height="210" width="314"></a></p>
+  <p><a href="geoform.html"><img src = "images/Sun_Diana_Geoform_03.jpg" height="210" width="314"></a></p>
   </div>
 
   <div class = "third" style="margin-right:0px">
-  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Primitive_Form_01.jpg" height="210" width="314"></a></p>
+  <p><a href="handtools.html"><img src = "images/Sun_Diana_Primitive_Form_01.jpg" height="210" width="314"></a></p>
   </div>
 
   <div class = "third">
-  <p><a href="www.diana-sun.com/blah"><img src = "images/Sun_Diana_Rotoform_02.jpg" height="210" width="314"></a></p>
+  <p><a href="rotoform.html"><img src = "images/Sun_Diana_Rotoform_02.jpg" height="210" width="314"></a></p>
   </div>
 
   <div class = "third">
-  <p><a href="www.diana-sun.com/blah"><img src = "images/Photography_1.jpg" height="210" width="314"></a></p>
+  <p><a href="photography.html"><img src = "images/Photography_1.jpg" height="210" width="314"></a></p>
   </div>
 
   <div class = "third" style="margin-right:0px">
-  <p><a href="www.diana-sun.com/blah"><img src = "images/Sketches_1.jpg" height="210" width="314"></a></p>
+  <p><a href="sketches.html"><img src = "images/Sketches_1.jpg" height="210" width="314"></a></p>
   </div>
 
 </div>
