--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 <body>
 <div id = "header">
-<center>Header goes here</center>
+<center>Designer Diana Sun</center>
 </div>
   <div class="nav">
     <div class = "container">
