Text and Header

--- a/about.html
+++ b/about.html
@@ -16,19 +16,27 @@
 
 <body>
 <div id = "header">
-<center>Designer Diana Sun</center>
+<center><a href="index.html">Designer Diana Sun</a></center>
 </div>
+
   <div class="nav">
     <div class = "container">
+    <div class = "row">
       <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="Diana_Sun_Resume.pdf">Resume</a></li>
+        <div class="col-md-1 col-md-offset-9"><li><a href="about.html">About</a></li></div>
+        <div class="col-md-1"><li><a href="Diana_Sun_Resume.pdf">Resume</a></li></div>
       </ul>
+    </div>
     </div>
   </div>
 
 <div class = "centered">
-	<p>hey</p>
+	<div class="row">
+  
+  		<div class="col-md-3"><img src = "Me.jpg" width="400"></div>
+  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. I learn by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world. I love minimalistic and humble designs, pushing boundaries, designing for problems that people may not realize they have, and Chipotle.</p></div>
+
+	</div>
 </div>
 
 <div id = "footer">
