--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
 
 <body>
 <div id = "header">
-<center>Designer Diana Sun</center>
+<center><a href="index.html">Designer Diana Sun</a></center>
 </div>
   <div class="nav">
     <div class = "container">
+    <div class = "row">
+
       <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="Diana_Sun_Resume.pdf">Resume</a></li>
+        <div class="col-md-1 col-md-offset-9"><li><a href="about.html">About</a></li></div>
+        <div class="col-md-1"><li><a href="Diana_Sun_Resume.pdf">Resume</a></li></div>
       </ul>
+
+    </div>
     </div>
   </div>
 
