--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 <body>
 <div id = "header">
-<center><a href="index.html">Designer Diana Sun</a></center>
+<center><a href="index.html"><img src = "Header.jpg" height = 100></a></center>
 </div>
 
   <div class="nav">
@@ -33,14 +33,14 @@
 <div class = "centered">
 	<div class="row">
   
-  		<div class="col-md-3"><img src = "Me.jpg" width="400"></div>
-  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. I learn by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world. I love minimalistic and humble designs, pushing boundaries, designing for problems that people may not realize they have, and Chipotle.</p></div>
+  		<div class="col-md-3"><p>&nbsp;</p><img src = "Me.jpg" width="400"></div>
+  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. An avid believer of learning by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world.</p> <p>I love minimalistic and humble designs, pushing boundaries, designing for problems that people may not realize they have, and Chipotle.</p></div>
 
 	</div>
 </div>
 
 <div id = "footer">
-<center>footer goes here</center>
+<center><img src = "Footer.jpg" height="15"></center>
 </div>
 </body>
 
