--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
 <body>
 <div id = "header">
-<center><a href="index.html">Designer Diana Sun</a></center>
+  <center><a href="index.html"><img src = "Header.jpg" height = "100"></a></center>
 </div>
+
   <div class="nav">
     <div class = "container">
     <div class = "row">
@@ -33,10 +34,10 @@
     </div>
   </div>
 
-<div class = "centered">
+<div class = "divider" height = "50"><p></p><p>&nbsp;</p></div>
 
-  <div class = "divider">
-  </div>
+
+<div class = "centered">
 
   <div class = "third">
   <p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314"></a></p>
@@ -65,7 +66,7 @@
 </div>
 
 <div id = "footer">
-<center>footer goes here</center>
+<center><img src = "Footer.jpg" height="15"></center>
 </div>
 </body>
 
