--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
     <div class = "container">
     <div class = "row">
       <ul>
-        <div class="col-md-1 col-md-offset-9"><li><a href="about.html">About</a></li></div>
+        <div class="col-md-1 col-md-offset-8"><li><a href="index.html">Portfolio</a></li></div>
+        <div class="col-md-1"><li><a href="about.html">&nbsp;&nbsp;About</a></li></div>
         <div class="col-md-1"><li><a href="Diana_Sun_Resume.pdf">Resume</a></li></div>
       </ul>
     </div>
@@ -33,8 +34,8 @@
 <div class = "centered">
 	<div class="row">
   
-  		<div class="col-md-3"><p>&nbsp;</p><img src = "Me.jpg" width="400"></div>
-  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. An avid believer of learning by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world.</p> <p>I love minimalistic and humble designs, pushing boundaries, designing for problems that people may not realize they have, and Chipotle.</p></div>
+  		<div class="col-md-3"><p>&nbsp;</p><img src = "Me.jpg" width="400"><p>&nbsp;</p></div>
+  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. An avid believer of learning by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world.</p> <p>I love minimalistic and humble designs, pushing boundaries, designing for problems that people may not realize they have, and Chipotle.</p><p>After taking an intro computing course, I decided to pick up HTML as a hobby and I have since coded this website. As my design sensibility and HTML/CSS knowledge increase, I hope this site will develop as well! In my free time I like to </div>
 
 	</div>
 </div>
