--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <div class = "row">
 
       <ul>
-        <div class="col-md-1 col-md-offset-9"><li><a href="about.html">About</a></li></div>
+        <div class="col-md-1 col-md-offset-8"><li><a href="index.html">Portfolio</a></li></div>
+        <div class="col-md-1"><li><a href="about.html">&nbsp;&nbsp;About</a></li></div>
         <div class="col-md-1"><li><a href="Diana_Sun_Resume.pdf">Resume</a></li></div>
       </ul>
 
@@ -37,33 +38,37 @@
 <div class = "divider" height = "50"><p></p><p>&nbsp;</p></div>
 
 
+
 <div class = "centered">
 
   <div class = "third">
-  <p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314"></a></p>
+    <div data-content="Here is a caption" class="image">
+        <div class="grow pic"><p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314" /></a></p></div>
+    </div>
   </div>
 
   <div class = "third">
-  <p><a href="geoform.html"><img src = "images/Sun_Diana_Geoform_03.jpg" height="210" width="314"></a></p>
+    <div class="grow pic"><p><a href="geoform.html"><img src = "images/Sun_Diana_Geoform_03.jpg" height="210" width="314"></a></p></div>
   </div>
 
   <div class = "third" style="margin-right:0px">
-  <p><a href="handtools.html"><img src = "images/Sun_Diana_Primitive_Form_01.jpg" height="210" width="314"></a></p>
+    <div class="grow pic"><p><a href="handtools.html"><img src = "images/Sun_Diana_Primitive_Form_01.jpg" height="210" width="314"></a></p></div>
   </div>
 
   <div class = "third">
-  <p><a href="rotoform.html"><img src = "images/Sun_Diana_Rotoform_02.jpg" height="210" width="314"></a></p>
+    <div class="grow pic"><p><a href="rotoform.html"><img src = "images/Sun_Diana_Rotoform_02.jpg" height="210" width="314"></a></p></div>
   </div>
 
   <div class = "third">
-  <p><a href="photography.html"><img src = "images/Photography_1.jpg" height="210" width="314"></a></p>
+    <div class="grow pic"><p><a href="photography.html"><img src = "images/Photography_1.jpg" height="210" width="314"></a></p></div>
   </div>
 
   <div class = "third" style="margin-right:0px">
-  <p><a href="sketches.html"><img src = "images/Sketches_1.jpg" height="210" width="314"></a></p>
+    <div class="grow pic"><p><a href="sketches.html"><img src = "images/Sketches_1.jpg" height="210" width="314"></a></p></div>
   </div>
 
 </div>
+
 
 <div id = "footer">
 <center><img src = "Footer.jpg" height="15"></center>
