--- a/about.html
+++ b/about.html
@@ -40,6 +40,14 @@
 	</div>
 </div>
 
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<div class = "copyright">
+<p><center>Copyright 2015 &copy; Diana Sun All Rights Reserved</center></p>
+</div>
+
+
 <div id = "footer">
 <center><img src = "Footer.jpg" height="15"></center>
 </div>
