--- a/flowform.html
+++ b/flowform.html
@@ -31,23 +31,33 @@
     </div>
   </div>
 
+
 <div class = "centered">
   <p>&nbsp;</p><p><big><big>Wooden Spatula</big></big></p>
+
 	<div class="row">
-  
   		<div class="col-md-3"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_03.jpg" width="390"></div>
   		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;This wooden spatula was an exploration of curves, ergonomics, and an introduction to wood working. blah the blah the blah the keke hihfds hjsf sfjhsd iaa dfhksd adhjksa fddsf ajshfds fdsjhfds ddsfjhdsf dsfkhjdsf fdskfhds fdshkfds hfds fdshfd d fds dsf dsf ds sf fs dfhkfds jkfsjkfs sfjkjfs fs jsf sfk fsjkfs ffd dsf sdf sfd fd sfd sf sdfhsfd gr tr tyr htrgh gr gtr tgr gtr teg gtr eg gte ggtr gte ter gtr eg treg reg trg gtre gteg egt g eg tre gte</p></div>
   </div>
+
   <div class="row">
       <div class="col-md-5"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;The spatula started out as just combinations of different curved lines. The dimensions were.. In the process we were asked to look for negative space, blah the blah the blah the keke hihfds hjsf sfjhsd iaa dfhksd adhjksa fddsf ajshfds fdsjhfds ddsfjhdsf dsfkhjdsf fdskfhds fdshkfds hfds fdshfd d fds dsf dsf ds sf fs dfhkfds jkfsjkfs sfjkjfs fs jsf sfk fsjkfs</p></div>
       <div class="col-md-3 col-md-offset-1"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_04.jpg" width="390"></div>
 	</div>
 
   <div class="row">
-      <div class="col-md-5"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;The spatula started out as just combinations of different curved lines. The dimensions were.. In the process we were asked to look for negative space, blah the blah the blah the keke hihfds hjsf sfjhsd iaa dfhksd adhjksa fddsf ajshfds fdsjhfds ddsfjhdsf dsfkhjdsf fdskfhds fdshkfds hfds fdshfd d fds dsf dsf ds sf fs dfhkfds jkfsjkfs sfjkjfs fs jsf sfk fsjkfs</p></div>
-      <div class="col-md-3 col-md-offset-1"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_04.jpg" width="390"></div>
+      <div class="col-md-3"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_06.jpg" width="390"></div>
+      <div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;This wooden spatula was an exploration of curves, ergonomics, and an introduction to wood working. blah the blah the blah the keke hihfds hjsf sfjhsd iaa dfhksd adhjksa fddsf ajshfds fdsjhfds ddsfjhdsf dsfkhjdsf fdskfhds fdshkfds hfds fdshfd d fds dsf dsf ds sf fs dfhkfds jkfsjkfs sfjkjfs fs jsf sfk fsjkfs ffd dsf sdf sfd fd sfd sf sdfhsfd gr tr tyr htrgh gr gtr tgr gtr teg gtr eg gte ggtr gte ter gtr eg treg reg trg gtre gteg egt g eg tre gte</p></div>
   </div>
 </div>
+
+<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+
+<div class = "copyright">
+<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+<p><center>Copyright 2015 &copy; Diana Sun All Rights Reserved</center></p>
+</div>
+
 
 <div id = "footer">
 <center><img src = "Footer.jpg" height="15"></center>
