--- a/rotoform.html
+++ b/rotoform.html
@@ -25,7 +25,7 @@
       <ul>
         <div class="col-md-1 col-md-offset-8"><li><a href="index.html">Portfolio</a></li></div>
         <div class="col-md-1"><li><a href="about.html">&nbsp;&nbsp;About</a></li></div>
-        <div class="col-md-1"><li><a href="Diana_Sun_Resume.pdf">Resume</a></li></div>
+        <div class="col-md-1"><li><a href="Diana_Sun_Resume.pdf" target="_blank">Resume</a></li></div>
       </ul>
     </div>
     </div>
@@ -33,7 +33,7 @@
 
 
 <div class = "centered">
-  <p>&nbsp;</p><p><big><big>Wooden Spatula</big></big></p>
+  <p>&nbsp;</p><p><big><big>Vessel Project</big></big></p>
 
 	<div class="row">
   		<div class="col-md-3"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_03.jpg" width="390"></div>
