--- a/photography.html
+++ b/photography.html
@@ -13,20 +13,21 @@
   Diana Sun Photography
   </title>
 
-
-		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<meta name="keywords" content="VisualLightBox, LightBox, Photo Gallery, lightbox gallery builder, flash gallery with lightbox" />
-		<meta name="description" content="Visual LightBox Gallery created with VisualLightBox, a free wizard program that helps you easily generate beautiful Lightbox-style web photo galleries" />
-				<!-- Start VisualLightBox.com HEAD section -->
-		<link rel="stylesheet" href="gallery_files/vlb_files1/vlightbox1.css" type="text/css" />
-		<link rel="stylesheet" href="gallery_files/vlb_files1/visuallightbox.css" type="text/css" media="screen" />
-		<script src="gallery_files/vlb_engine/jquery.min.js" type="text/javascript"></script>
-		<script src="gallery_files/vlb_engine/visuallightbox.js" type="text/javascript"></script>
-		<!-- End VisualLightBox.com HEAD section -->
+	  <link rel="stylesheet" type="text/css" media="screen" href="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css" />
+	<style type="text/css">
+	    a.fancybox img {
+	        border: none;
+	        box-shadow: 0 1px 7px rgba(0,0,0,0.6);
+	        -o-transform: scale(1,1); -ms-transform: scale(1,1); -moz-transform: scale(1,1); -webkit-transform: scale(1,1); transform: scale(1,1); -o-transition: all 0.2s ease-in-out; -ms-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -webkit-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out;
+	    } 
+	    a.fancybox:hover img {
+	        position: relative; z-index: 999; -o-transform: scale(1.03,1.03); -ms-transform: scale(1.03,1.03); -moz-transform: scale(1.03,1.03); -webkit-transform: scale(1.03,1.03); transform: scale(1.03,1.03);
+	    }
+	</style>
 
 </head>
 
-<body bgcolor="#f7f7f7">
+<body>
 <div id = "header">
 <center><a href="index.html"><img src = "Header.jpg" height = 100></a></center>
 </div>
@@ -45,43 +46,153 @@
   </div>
 
 
-<!-- Start VisualLightBox.com BODY section id=1 -->
-	<div id="vlightbox1">
-	<a class="vlightbox1" href="gallery_files/vlb_images1/l1.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l1.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/l2.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l2.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/l3.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l3.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/l4.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l4.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/l5.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l5.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/l6.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l6.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/l7.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l7.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/l8.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l8.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/l9.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l9.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/l10.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/l10.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/t1.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/t1.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/t2.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/t2.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/t3.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/t3.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/t4.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/t4.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/t5.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/t5.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/t6.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/t6.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/t7.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/t7.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/t8.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/t8.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p3.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/p3.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p4.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/p4.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p5.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/p5.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p6.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/p6.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p7.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/p7.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p8.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/p8.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p9.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/p9.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p10.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/p10.jpg" alt=" "/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p2.jpg" title=""><img src="gallery_files/vlb_thumbnails1/p2.jpg" alt=""/></a>
-<a class="vlightbox1" href="gallery_files/vlb_images1/p1.jpg" title=" "><img src="gallery_files/vlb_thumbnails1/p1.jpg" alt=" "/></a>
-<span class="vlb"><a href="http://visuallightbox.com">lightbox 2 nextgen gallery</a>by VisualLightBox.com v6.1</span>
-	</div>
-	<script src="gallery_files/vlb_engine/thumbscript1.js" type="text/javascript"></script>
-	<script src="gallery_files/vlb_engine/vlbdata1.js" type="text/javascript"></script>
-	<!-- End VisualLightBox.com BODY section -->
+
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
+<script type="text/javascript">
+    $(function($){
+        var addToAll = false;
+        var gallery = true;
+        var titlePosition = 'inside';
+        $(addToAll ? 'img' : 'img.fancybox').each(function(){
+            var $this = $(this);
+            var title = $this.attr('title');
+            var src = $this.attr('data-big') || $this.attr('src');
+            var a = $('<a href="#" class="fancybox"></a>').attr('href', src).attr('title', title);
+            $this.wrap(a);
+        });
+        if (gallery)
+            $('a.fancybox').attr('rel', 'fancyboxgallery');
+        $('a.fancybox').fancybox({
+            titlePosition: titlePosition
+        });
+    });
+    $.noConflict();
+</script>
 
 
+
+<div class = "centered2">
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/l1.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/l2.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third" style="margin-right:0px">
+   <div><p>&nbsp;</p><center><img class="fancybox" src="photography/l3.jpg" width = "314"/></center></div>
+  </div>
+
+
+  <div class = "third">
+  	<div><p>&nbsp;</p><center><img class="fancybox" src="photography/l4.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third">
+  	<div><p>&nbsp;</p><center><img class="fancybox" src="photography/l5.jpg" height = "210"/></center></div>
+  </div>
+
+  <div class = "third" style="margin-right:0px">
+  	<div><p>&nbsp;</p><center><img class="fancybox" src="photography/l6.jpg" width = "314"/></center></div>
+  </div>
+
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/l7.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/l8.jpg" height = "210"/></center></div>
+  </div>
+
+  <div class = "third" style="margin-right:0px">
+   <div><p>&nbsp;</p><center><img class="fancybox" src="photography/l9.jpg" width = "314"/></center></div>
+  </div>
+
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/l10.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/t1.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third" style="margin-right:0px">
+   <div><p>&nbsp;</p><center><img class="fancybox" src="photography/t2.jpg" width = "314"/></center></div>
+  </div>
+
+
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/t3.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/t4.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third" style="margin-right:0px">
+   <div><p>&nbsp;</p><center><img class="fancybox" src="photography/t5.jpg" width = "314"/></center></div>
+  </div>
+
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/t7.jpg" height = "210"/></center></div>
+  </div>
+
+  <div class = "third">
+  	<div><p>&nbsp;</p><center><img class="fancybox" src="photography/t6.jpg" height = "210"/></center></div>
+  </div>
+
+  <div class = "third" style="margin-right:0px">
+   <div><p>&nbsp;</p><center><img class="fancybox" src="photography/t8.jpg" height = "210"/></center></div>
+  </div>
+
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/p1.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third">
+  	<div><p>&nbsp;</p><center><img class="fancybox" src="photography/p2.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third" style="margin-right:0px">
+   <div><p>&nbsp;</p><center><img class="fancybox" src="photography/p3.jpg" width = "314"/></center></div>
+  </div>
+
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/p4.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third">
+  	<div><p>&nbsp;</p><center><img class="fancybox" src="photography/p6.jpg" height = "210"/></center></div>
+  </div>
+
+  <div class = "third" style="margin-right:0px">
+   <div><p>&nbsp;</p><center><img class="fancybox" src="photography/p5.jpg" width = "314"/></center></div>
+  </div>
+
+
+  <div class = "third">
+    <div><p>&nbsp;</p><center><img class="fancybox" src="photography/p7.jpg" width = "314"/></center></div>
+  </div>
+
+  <div class = "third">
+  	<div><p>&nbsp;</p><center><img class="fancybox" src="photography/p8.jpg" height = "210"/></center></div>
+  </div>
+
+  <div class = "third" style="margin-right:0px">
+   <div><p>&nbsp;</p><center><img class="fancybox" src="photography/p9.jpg" width = "314"/></center></div>
+  </div>
+
+</div>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
