--- a/about.html
+++ b/about.html
@@ -36,7 +36,8 @@
 	<div class="row">
   
   		<div class="col-md-3"><p>&nbsp;</p><img src = "Me.jpg" width="400"><p>&nbsp;</p></div>
-  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. An avid believer of learning by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world.</p> <p>I love minimalistic and humble designs, pushing boundaries, designing for problems that people may not realize they have, and Chipotle.</p><p>After taking an intro computing course, I decided to pick up HTML as a hobby and I have since coded this website. As my design sensibility and HTML/CSS knowledge increase, I hope this site will develop as well! In my free time I like to </div>
+  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. An avid believer of learning by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world.</p> <p>I love minimalistic and humble designs, pushing boundaries, designing for problems that people may not realize they have, and Chipotle.</p><p>After taking an intro computing course, I decided to pick up HTML as a hobby and I have since coded this website. As my design sensibility and HTML/CSS knowledge increase, I hope this site will develop as well! In my free time I like to ... My inspiration include Robert van Embricqs Sebastian Errazuriz Norman Bel Geddes Jean-Marie Massaud Massimo Vignelli
+</div>
 
 	</div>
 </div>
