--- a/about.html
+++ b/about.html
@@ -36,7 +36,10 @@
 	<div class="row">
   
   		<div class="col-md-3"><p>&nbsp;</p><img src = "Me.jpg" width="400"><p>&nbsp;</p></div>
-  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. An avid believer of learning by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world.</p> <p>I love minimalistic and humble designs, pushing boundaries, designing for problems that people may not realize they have, and Chipotle.</p><p>After taking an intro computing course, I decided to pick up HTML as a hobby and I have since coded this website. As my design sensibility and HTML/CSS knowledge increase, I hope this site will develop as well! In my free time I like to ... My inspiration include Robert van Embricqs Sebastian Errazuriz Norman Bel Geddes Jean-Marie Massaud Massimo Vignelli
+  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p>
+  		<p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. An avid believer of learning by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world. I'm inspired by the works of Robert van Embricqs, Sebastian Errazuriz, Norman Bel Geddes, Jean-Marie Massaud, and Massimo Vignelli. I love minimalistic and humble designs and pushing boundaries. I want to design experiences that bring people happiness and solve problems people may not even realize they have.</p>
+  		<p>Outside of design, I enjoy watching cooking shows, petting dogs, making guac, and finding new adventures. I love to explore new things whenever I can and try to fill every day with laughter. I believe the best experiences are those shared with others, and in the future I want my designs to impact those special social interactions.</p>
+  		<p>I have coded this website and hope to improve upon it as I learn more html and css.
 </div>
 
 	</div>
