--- a/index.html
+++ b/index.html
@@ -43,37 +43,37 @@
 
   <div class = "third">
     <div data-content="Flowform" class="image">
-        <div class="grow pic"><p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314" /></a></p></div>
+        <div class="grow pic"><p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02small.jpg" height="210" width="314" /></a></p></div>
     </div>
   </div>
 
   <div class = "third">
     <div data-content="Geoform" class="image">
-      <div class="grow pic"><p><a href="geoform.html"><img src = "images/Sun_Diana_Geoform_03.jpg" height="210" width="314"></a></p></div>
+      <div class="grow pic"><p><a href="geoform.html"><img src = "images/Sun_Diana_Geoform_03small.jpg" height="210" width="314"></a></p></div>
     </div>
   </div>
 
   <div class = "third" style="margin-right:0px">
     <div data-content="Hand Tools" class="image">
-      <div class="grow pic"><p><a href="handtools.html"><img src = "images/Sun_Diana_Primitive_Form_01.jpg" height="210" width="314"></a></p></div>
+      <div class="grow pic"><p><a href="handtools.html"><img src = "images/Sun_Diana_Primitive_Form_01small.jpg" height="210" width="314"></a></p></div>
     </div>
   </div>
 
   <div class = "third">
     <div data-content="Rotoform" class="image">
-      <div class="grow pic"><p><a href="rotoform.html"><img src = "images/Sun_Diana_Rotoform_02.jpg" height="210" width="314"></a></p></div>
+      <div class="grow pic"><p><a href="rotoform.html"><img src = "images/Sun_Diana_Rotoform_02small.jpg" height="210" width="314"></a></p></div>
     </div>
   </div>
 
   <div class = "third">
     <div data-content="Photography" class="image">
-      <div class="grow pic"><p><a href="photography.html"><img src = "images/Photography_1.jpg" height="210" width="314"></a></p></div>
+      <div class="grow pic"><p><a href="photography.html"><img src = "images/Photography_1small.jpg" height="210" width="314"></a></p></div>
     </div>
   </div>
 
   <div class = "third" style="margin-right:0px">
     <div data-content="Sketches" class="image">
-      <div class="grow pic"><p><a href="sketches.html"><img src = "images/Sketches_1.jpg" height="210" width="314"></a></p></div>
+      <div class="grow pic"><p><a href="sketches.html"><img src = "images/Sketches_1small.jpg" height="210" width="314"></a></p></div>
     </div>
   </div>
 
