--- a/extinguisher.html
+++ b/extinguisher.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
   <title>
-  Flowform Project
+  Form and Fire
   </title>
 
 </head>
@@ -34,7 +34,7 @@
 
 
 <div class = "centered">
-  <p>&nbsp;</p><p><big><big>Hand Tools</big></big></p>
+  <p>&nbsp;</p><p><big><big>Fire Extinguisher</big></big></p>
 
 	<div class="row">
   		<div class="col-md-3"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_03.jpg" width="390"></div>
