--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 
 <body>
-<div id = "header">
-  <center><a href="index.html"><img src = "Header.jpg" height = "100"></a></center>
+<div id = "indexheader">
+  <center><a href="index.html"><img src = "Header1.jpg" height = "100"></a></center>
 </div>
 
   <div class="nav">
@@ -43,7 +43,7 @@
 
   <div class = "third">
     <div data-content="Flowform" class="image">
-        <div class="grow pic"><p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02small.jpg" height="210" width="314" /></a></p></div>
+        <div class="grow pic"><p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314" /></a></p></div>
     </div>
   </div>
 
@@ -54,8 +54,8 @@
   </div>
 
   <div class = "third" style="margin-right:0px">
-    <div data-content="Hand Tools" class="image">
-      <div class="grow pic"><p><a href="handtools.html"><img src = "images/Sun_Diana_Primitive_Form_01small.jpg" height="210" width="314"></a></p></div>
+    <div data-content="Form and Fire" class="image">
+      <div class="grow pic"><p><a href="extinguisher.html"><img src = "images/Sun_Diana_Primitive_Form_01small.jpg" height="210" width="314"></a></p></div>
     </div>
   </div>
 
