--- a/sketches.html
+++ b/sketches.html
@@ -33,6 +33,39 @@
   </div>
 
 
+<div class = "centeredsketches">
+  <p>&nbsp;</p><p><big><big>Sketches</big></big></p>
+
+  <div class="row">
+      <div class="col-md-9 col-md-offset-2"><p>&nbsp;</p><img src = "images/Sketches1.jpg" width="630"></div>
+  </div>
+
+  <div class="row">
+      <div class="col-md-9 col-md-offset-2"><p>&nbsp;</p><img src = "images/Sketches2.jpg" width="630"></div>
+  </div>
+
+  <div class="row">
+      <div class="col-md-9 col-md-offset-2"><p>&nbsp;</p><img src = "images/Sketches3.jpg" width="630"></div>
+  </div>
+
+  <div class="row">
+      <div class="col-md-9 col-md-offset-2"><p>&nbsp;</p><img src = "images/Sketches4.jpg" width="630"></div>
+  </div>
+
+  <div class="row">
+      <div class="col-md-9 col-md-offset-2"><p>&nbsp;</p><img src = "images/Sketches5.jpg" width="630"></div>
+  </div>
+
+  <div class="row">
+      <div class="col-md-9 col-md-offset-2"><p>&nbsp;</p><img src = "images/Sketches6.jpg" width="630"></div>
+  </div>
+
+  <div class="row">
+      <div class="col-md-9 col-md-offset-2"><p>&nbsp;</p><img src = "images/Sketches7.jpg" width="630"></div>
+  </div>
+
+</div>
+
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
