--- a/extinguisher.html
+++ b/extinguisher.html
@@ -33,22 +33,25 @@
   </div>
 
 
-<div class = "centered">
+<div class = "centeredextinguisher">
   <p>&nbsp;</p><p><big><big>Fire Extinguisher</big></big></p>
 
-	<div class="row">
-  		<div class="col-md-3"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_03.jpg" width="390"></div>
-  		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;This wooden spatula was an exploration of curves, ergonomics, and an introduction to wood working. blah the blah the blah the keke hihfds hjsf sfjhsd iaa dfhksd adhjksa fddsf ajshfds fdsjhfds ddsfjhdsf dsfkhjdsf fdskfhds fdshkfds hfds fdshfd d fds dsf dsf ds sf fs dfhkfds jkfsjkfs sfjkjfs fs jsf sfk fsjkfs ffd dsf sdf sfd fd sfd sf sdfhsfd gr tr tyr htrgh gr gtr tgr gtr teg gtr eg gte ggtr gte ter gtr eg treg reg trg gtre gteg egt g eg tre gte</p></div>
+  <div class="row">
+      <div class="col-md-5"><p>&nbsp;</p><img src = "images/Fire2pics.jpg" width = "885"></div>
   </div>
 
   <div class="row">
-      <div class="col-md-5"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;The spatula started out as just combinations of different curved lines. The dimensions were.. In the process we were asked to look for negative space, blah the blah the blah the keke hihfds hjsf sfjhsd iaa dfhksd adhjksa fddsf ajshfds fdsjhfds ddsfjhdsf dsfkhjdsf fdskfhds fdshkfds hfds fdshfd d fds dsf dsf ds sf fs dfhkfds jkfsjkfs sfjkjfs fs jsf sfk fsjkfs</p></div>
-      <div class="col-md-3 col-md-offset-1"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_04.jpg" width="390"></div>
-	</div>
+      <div class="col-md-5"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;This wooden spatula was an exploration of flow forms, ergonomics, and an introduction to wood working. The spatula had to be empathetic to the user and have good visual transitions between the different edges. The spatula started out as just combinations of curves but after exploring negative space, composition, and subtle implications in form, I imroved its visual language.</p></div>
+      <div class="col-md-3 col-md-offset-1"><p>&nbsp;</p><img src = "images/Fire_Context.jpg" width="390"></div>
+  </div>
 
   <div class="row">
-      <div class="col-md-3"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_06.jpg" width="390"></div>
-      <div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;This wooden spatula was an exploration of curves, ergonomics, and an introduction to wood working. blah the blah the blah the keke hihfds hjsf sfjhsd iaa dfhksd adhjksa fddsf ajshfds fdsjhfds ddsfjhdsf dsfkhjdsf fdskfhds fdshkfds hfds fdshfd d fds dsf dsf ds sf fs dfhkfds jkfsjkfs sfjkjfs fs jsf sfk fsjkfs ffd dsf sdf sfd fd sfd sf sdfhsfd gr tr tyr htrgh gr gtr tgr gtr teg gtr eg gte ggtr gte ter gtr eg treg reg trg gtre gteg egt g eg tre gte</p></div>
+      <div class="col-md-3"><p>&nbsp;</p><img src = "images/Fire3.jpg" width="420"></div>
+      <div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;After figuring out the pain and comfort points on my hand, I designed a spatula that was comfortable to hold and inspired by the curvature of dancers. The final wooden model was crafted using the bandsaw, sanding machines, and hand sanding.</p></div>
+  </div>
+
+   <div class="row">
+      <div class="col-md-12"><p>&nbsp;</p><img src = "images/Fire_Renderings5.jpg" width="885"></div>
   </div>
 </div>
 
