--- a/geoform.html
+++ b/geoform.html
@@ -34,21 +34,25 @@
 
 
 
-<div class = "centeredspatula">
+<div class = "centeredstool">
   <p>&nbsp;</p><p><big><big>Geoform</big></big></p>
 
   <div class="row">
-      <div class="col-md-12"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_03.jpg" width="885"></div>
+      <div class="col-md-12"><p>&nbsp;</p><img src = "images/Sun_Diana_Geoform_02.jpg" width="885"></div>
   </div>
 
   <div class="row">
       <div class="col-md-5"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;This wooden spatula was an exploration of flow forms, ergonomics, and an introduction to wood working. The spatula had to be empathetic to the user and have good visual transitions between the different edges. The spatula started out as just combinations of curves but after exploring negative space, composition, and subtle implications in form, I imroved its visual language.</p></div>
-      <div class="col-md-3 col-md-offset-1"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_04.jpg" width="390"></div>
+      <div class="col-md-3 col-md-offset-1"><p>&nbsp;</p><img src = "images/Sun_Diana_Geoform_04small.jpg" width="390"></div>
   </div>
 
   <div class="row">
-      <div class="col-md-3"><p>&nbsp;</p><img src = "images/Sun_Diana_Flowform_06.jpg" width="390"></div>
+      <div class="col-md-3"><p>&nbsp;</p><img src = "images/Sun_Diana_Geoform_Compositesmall.jpg" width="390"></div>
       <div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p><p>&nbsp; &nbsp; &nbsp;After figuring out the pain and comfort points on my hand, I designed a spatula that was comfortable to hold and inspired by the curvature of dancers. The final wooden model was crafted using the bandsaw, sanding machines, and hand sanding.</p></div>
+  </div>
+
+   <div class="row">
+      <div class="col-md-12"><p>&nbsp;</p><img src = "images/Geoform_Orthographic_Components.jpg" width="885"></div>
   </div>
 </div>
 
