--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 <div id = "indexheader">
-  <center><a href="index.html"><img src = "Header1.jpg" height = "100"></a></center>
+  <center><a href="index.html"><img src = "Header.jpg" height = "100"></a></center>
 </div>
 
   <div class="nav">
@@ -42,26 +42,26 @@
 <div class = "centered">
 
   <div class = "third">
-    <div data-content="Flowform" class="image">
-        <div class="grow pic"><p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314" /></a></p></div>
-    </div>
-  </div>
-
-  <div class = "third">
     <div data-content="Geoform" class="image">
       <div class="grow pic"><p><a href="geoform.html"><img src = "images/Sun_Diana_Geoform_03small.jpg" height="210" width="314"></a></p></div>
     </div>
   </div>
 
+  <div class = "third">
+    <div data-content="Flowform" class="image">
+        <div class="grow pic"><p><a href="flowform.html"><img src = "images/Sun_Diana_Flowform_02.jpg" height="210" width="314" /></a></p></div>
+    </div>
+  </div>
+
   <div class = "third" style="margin-right:0px">
-    <div data-content="Form and Fire" class="image">
-      <div class="grow pic"><p><a href="extinguisher.html"><img src = "images/Sun_Diana_Primitive_Form_01small.jpg" height="210" width="314"></a></p></div>
+    <div data-content="Rotoform" class="image">
+      <div class="grow pic"><p><a href="rotoform.html"><img src = "images/Sun_Diana_Rotoform_02small.jpg" height="210" width="314"></a></p></div>
     </div>
   </div>
 
   <div class = "third">
-    <div data-content="Rotoform" class="image">
-      <div class="grow pic"><p><a href="rotoform.html"><img src = "images/Sun_Diana_Rotoform_02small.jpg" height="210" width="314"></a></p></div>
+    <div data-content="Form and Fire" class="image">
+      <div class="grow pic"><p><a href="extinguisher.html"><img src = "images/Fire_Renderings5small.jpg" height="210" width="314"></a></p></div>
     </div>
   </div>
 
