--- a/about.html
+++ b/about.html
@@ -37,9 +37,8 @@
   
   		<div class="col-md-3"><p>&nbsp;</p><img src = "Me.jpg" width="400"><p>&nbsp;</p></div>
   		<div class="col-md-5 col-md-offset-3"><p></p><p>&nbsp;</p>
-  		<p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. An avid believer of learning by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world. I'm inspired by the works of Robert van Embricqs, Sebastian Errazuriz, Norman Bel Geddes, Jean-Marie Massaud, and Massimo Vignelli. I love minimalistic and humble designs and pushing boundaries. I want to design experiences that bring people happiness and solve problems people may not even realize they have.</p>
+  		<p>&nbsp; &nbsp; &nbsp;Hi I'm Diana, an industrial design student at Carnegie Mellon. An avid believer of learning by doing, I'm constantly looking for opportunities to apply user centered design in both the physical and virtual world. This site shows some of my favorite designs and I have coded this website and hope to improve upon it as I learn more html and css. I'm inspired by the works of Robert van Embricqs, Sebastian Errazuriz, Norman Bel Geddes, Jean-Marie Massaud, and Massimo Vignelli. I love minimalistic and humble designs and pushing boundaries. I want to design experiences that bring people happiness and solve problems people may not even realize they have.</p>
   		<p>Outside of design, I enjoy watching cooking shows, petting dogs, making guac, and finding new adventures. I love to explore new things whenever I can and try to fill every day with laughter. I believe the best experiences are those shared with others, and in the future I want my designs to impact those special social interactions.</p>
-  		<p>I have coded this website and hope to improve upon it as I learn more html and css.
 </div>
 
 	</div>
