--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,600italic,600' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
@@ -15,26 +17,29 @@
 </head>
 
 
-<body>
+<body><!--
 <div id = "indexheader">
-  <center><a href="index.html"><img src = "Header.jpg" height = "100"></a></center>
+  <center><a href="index.html"><img src = "Header.jpg" height="100"></a></center>
 </div>
-
-  <div class="nav">
+-->
+  <div class="jumbo"></div>
+  <div class="jumbo-text">
+    <span style="font-size:48px;">Diana Sun</span>
+    <hr>
+    Hello, I want to design products and experiences that make people happy.
+  </div>
+  <div class="nav" style="position:relative; bottom:200px;">
     <div class = "container">
     <div class = "row">
-
       <ul>
-        <div class="col-md-1 col-md-offset-7"><li><a href="index.html">Portfolio</a></li></div>
+        <div class="col-md-1 col-md-offset-4"><li><a href="index.html">Portfolio</a></li></div>
         <div class="col-md-1"><li><a href="about.html">&nbsp;&nbsp;About</a></li></div>
         <div class="col-md-1"><li><a href="Diana_Sun_Resume.pdf" target="_blank">Resume</a></li></div>
         <div class="col-md-1"><li><a href="contact.html">Contact</a></li></div>
       </ul>
-
     </div>
     </div>
   </div>
-
 <p></p><p>&nbsp;</p>
 
 
