--- a/flowform.html
+++ b/flowform.html
@@ -16,14 +16,14 @@
 
 <body>
 <div id = "header">
-<center><a href="index.html"><img src = "Header.jpg" height = 100></a></center>
+<center><a href="index.html"></a></center>
 </div>
 
   <div class="nav">
     <div class = "container">
     <div class = "row">
       <ul>
-        <div class="col-md-1 col-md-offset-7"><li><a href="index.html">Portfolio</a></li></div>
+        <div class="col-md-1 col-md-offset-4"><li><a href="index.html">Portfolio</a></li></div>
         <div class="col-md-1"><li><a href="about.html">&nbsp;&nbsp;About</a></li></div>
         <div class="col-md-1"><li><a href="Diana_Sun_Resume.pdf" target="_blank">Resume</a></li></div>
         <div class="col-md-1"><li><a href="contact.html">Contact</a></li></div>
